<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DriveTrack Plus</string>
    <string name="reload">Reload</string>
    <string name="cashreload">Cash Reload</string>
    <string name="chequereload">Cheque Reload</string>
    <string name="ccmsreload">Ccms Reload</string>
    <string name="payback">PAYBACK</string>
    <string name="entercheckno">Enter Check No. and MICR Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterterminal">Enter Terminal Pin</string>
    <string name="entermerchant">Merchant Pin</string>
    <string name="title_activity_void_enter_amount">VoidEnterAmountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="previous">Previous</string>
    <string name="enter_ctrl_card_number">Enter Control Card No.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="driverloyalty">Driver Loyalty</string>
    <string name="paycode_voucher">Paycode/Gift Voucher</string>
    <string name="dtp">DTP</string>
    <string name="nondtp">NON DTP</string>
    <string name="selectfuel">Select Fuel</string>
    <string name="enterpoint">Enter Points To Redeem</string>
    <string name="presentcard">Present Card</string>
    <string name="printblnc">Print Balance</string>
    <string name="yes">Yes</string>
    <string name="transuccess">Transaction Success</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="changeTermPin">Change Terminal Pin</string>
    <string name="enteroldpin">Enter Old Pin</string>
    <string name="clear">Clear</string>
    <string name="enternewpin">Enter New Pin</string>
    <string name="reenternewpin">Re-Enter New Pin</string>
    <string name="loyltyblnc">Loyalty Balance</string>
    <string name="enterctrlcrdno">Enter CTRL Card No:</string>
    <string name="enterctrlpin">Enter Control Pin</string>
    <string name="entervalidamount">Enter Valid Amount</string>
    <string name="entervalidcardpin">Enter Valid Card Pin</string>
    <string name="enterterminalpin">Enter Valid Terminal Pin</string>
    <string name="entervalidotp">Enter Valid Otp</string>
    <string name="entervalidmono">Enter Valid Mobile Number</string>
    <string name="entervalidctrlpin">Enter Valid Control Pin</string>
    <string name="terminalpin">Terminal Pin</string>
    <string name="entervalirocno">Enter Valid ROC No</string>
    <string name="mismatchrocno">Mismatch ROC No</string>
    <string name="entervalidctrno">Enter Valid Control Card No</string>
    <string name="entervalidredeempoints">Enter Valid Redeem Points</string>
    <string name="operatoroption">Operator Option</string>
    <string name="addoperator">Add Operator</string>
    <string name="id">Id :</string>
    <string name="password">Password :</string>
    <string name="confirm">Confirm</string>
    <string name="operatorid">Operator Id</string>
    <string name="pass">Password</string>
    <string name="entermobileno">Mobile Number</string>
    <string name="enterchecknoonly">Enter Check Number</string>
    <string name="entermicrno">Enter MICR Number</string>
    <string name="changepin">Change Pin</string>
    <string name="rocno">ROC Number</string>
    <string name="changecardpin">Change Card Pin</string>
    <string name="controlpinchange">Control Pin Change</string>
    <string name="unblockcardpin">Unblock Card Pin</string>
    <string name="entervalidmicrno">Enter Valid MICR Number</string>
    <string name="entercardpin">Enter  Card Pin</string>
    <string name="cardpin">Card Pin</string>
    <string name="entervalidcheqno">Enter Valid Cheque Number</string>
    <string name="cardpinchanged">Card Pin Changed</string>
    <string name="entervalidoldpin">Enter Valid Old Pin</string>
    <string name="entervalidnewpin">Enter Valid New Pin</string>
    <string name="entervalidreintpin">Enter Valid Re-Enter new pin</string>
    <string name="mismatchnewpin">Mismatch New Pin</string>
    <string name="mismatchterminalpin">Mismatch Terminal Pin</string>
    <string name="min_and_max_length">Min and Max length is 4</string>
    <string name="four_zeros">Please Enter Deifferent Pin</string>
    <string name="operator_already_exist">Operator Already Exist.</string>
    <string name="cardunblock">Card Unblocked Successfully</string>
    <string name="ctrlcardno">Control Card Number</string>
    <string name="entervalidutrno">Enter Valid UTR Number</string>
    <string name="voidpayback">Void</string>
    <string name="ok">OK</string>
    <string name="enterterminalp">Enter Terminal Pin</string>
    <string name="cardunblocksuccess">Card Unblocking Success.</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enteropeartorid">Enter Operator Id</string>
    <string name="cardsale">Card Sale</string>
    <string name="ccmssale">CCMS SALE</string>
    <string name="dtplus">DTPLUS</string>
    <string name="fasttag">FAST TAGS</string>
    <string name="seletcttype">SELECT TYPE</string>
    <string name="hdfc">HDFC</string>
    <string name="idfc">IDFC</string>
    <string name="printer_fontset_ascii">ascii:</string>
    <string name="printer_fontset_extcode">extCode:</string>
    <string name="printer_bitmap_contain">contain bitmap</string>
    <string name="printer_bitmap_no">no bitmap</string>
    <string name="printer_spaceset_word">word space</string>
    <string name="printer_spaceset_line">line space</string>
    <string name="printer_leftindent">left indent</string>
    <string name="printer_setgray">set gray</string>
    <string name="printer_double_width">double width</string>
    <string name="printer_normal_width">normal width</string>
    <string name="printer_double_height">double height</string>
    <string name="printer_normal_height">normal height</string>
    <string name="printer_invert">invert print</string>
    <string name="printer_normal">normal print</string>
    <string name="printer_step">print step</string>
    <string name="printer_status">getStatus</string>
    <string name="printer_getdotline">getDotLine</string>
    <string name="printer_prnstr">print string </string>
    <string name="printer_start">start</string>
    <string name="printer_edit_hint">0</string>
    <string name="printer_edit_gray_hint">1</string>
    <string name="printer_step_hint">150</string>
    <string name="printer_test_str">打印测试语句ABCabc123~!#$富豪コンピュータ</string>
    <string name="mag_swipe_card">Please swipe the card…</string>
    <string name="mag_card_error">read card error</string>
    <string name="mag_track1_data">\ntrack1 data：</string>
    <string name="mag_track2_data">\ntrack2 data：</string>
    <string name="mag_track3_data">\ntrack3 data：</string>
    <string name="icc_detect_nocard">Plese insert the card…</string>
    <string name="icc_detect_havecard">have detected the card</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="about">About</string>
    <string name="softwareVer">Software Version</string>
    <string name="buildType">Build Type</string>
    <string name="buildDate">Build Date</string>
    <string name="romVersion">Rom Version</string>
    <string name="firmwareVer">Fireware Version</string>
    <string name="serviceVer">Service Version</string>
    <string name="modelName">Model Name</string>
    <string name="serialNo">Serial Number</string>
    <string name="osVersion">OS Version</string>
    <string name="simStatus">Sim Status</string>
    <string name="balance">BALANCE</string>
    <string name="balance_enquiry">BALANCE ENQUIRY</string>
    <string name="internal_server_error">Connectivity failed, please try again</string>
    <string name="server_due_to_maintanance">Server is in Maintenance</string>
    <string name="receiving">Receiving....</string>
    <string name="settlement_in_progress">Please wait\nSettlement in progress</string>
    <string name="please_swipe">Please Swipe Again</string>
    <string name="insert_card">Please Insert Card again</string>
    <string name="customer_copy"><u>CUSTOMER COPY</u></string>
    <string name="merchant_copy"><u>MERCHANT COPY</u></string>
    <string name="hpcl">HPCL</string>
    <string name="label_ok">OK</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="success">Success: </string>
    <string name="ok_text">OK</string>
    <string name="amount">Amount:</string>
    <string name="void_amount">Void Amount</string>
    <string name="void_title">Void</string>
    <string name="transactionType">Transaction Type</string>
    <string name="type">TYPE:</string>
    <string name="roc">ROC:</string>
    <string name="batch_number">BATCH NO:</string>
    <string name="card_no">Card No</string>
    <string name="insert_swipe_or_enter_mobile">Insert/Swipe Card or Enter Mobile No.</string>
    <string name="ccms_to_card">CCMS to Card</string>
    <string name="card_to_ccms">Card to CCMS</string>
    <string name="enter_min_9_digits">Enter Min. 15 digits and max 20 digits</string>
    <string name="enter_min_2_digits">Enter Min. 2 digits</string>
    <string name="title_settlement">Settlement </string>
    <string name="title_registration">Registration </string>
    <string name="settlement_ok">Settlement OK</string>
    <string name="settlement">SETTLEMENT</string>
    <string name="count">COUNT</string>
    <string name="total">TOTAL</string>
    <string name="settle">Settle</string>
    <string name="remind"></string>
    <string name="message">This Transaction is for payment recieved by</string>
    <string name="auto_settle_message">Batch will automatically get settled after successful CCMS Recharge transaction</string>
    <string name="auto_settle_message_reload">Batch will automatically get settled after successful Reload transaction</string>
    <string name="terminalPin">Terminal Pin</string>
    <string name="addOperator">Add Operator</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="fasttag_bankname">FASTAG BANK</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_vehicle_no">Enter Vehicle No.</string>
    <string name="enter_last_4_digits_vehicle_no">Enter Last 4 digit Vehicle No</string>
    <string name="last_4_digits">Last 4 digits</string>
    <string name="operator_options">Operator Options</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="registration">Registration</string>
    <string name="iac_id">IAC ID</string>
    <string name="please_add_operator">Please Add Operator</string>
    <string name="please_unblock_terminal_pin">Please Unblock Terminal Pin</string>
    <string name="registration_alert_message">Please Register the Terminal to Perform Transaction</string>
    <string name="server_ip">Server IP</string>
    <string name="key_exchange">Please do the Key Exchange and Logon</string>
    <string name="batch_settlement_msg">Please Settle the batch</string>
    <string name="server_port">Server Port</string>
    <string name="second_server_ip">Second Server IP</string>
    <string name="second_server_port">Second Server Port</string>
    <string name="qr_code">QR Code</string>
    <string name="proceed_for_next_step">Proceed for next step after \n scanning QR code</string>
    <string name="amount_hp_pay">Amount: \u20B9 </string>
    <string name="merchant">MS Filling Stn</string>
    <string name="validtill">Valid Till 2:49</string>
</resources>