<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.selecttransactiontype.SelectTransactionTypeFargment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/rounded_fragment_white">

           <TextView
               android:fontFamily="@font/ptregular"
               android:layout_marginTop="10dp"
               android:gravity="center"
               android:textColor="@color/black"
               android:textSize="18sp"
               android:text="@string/printblnc"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

           </TextView>

            <Button
                android:fontFamily="@font/ptregular"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/btnYes"
                android:text="@string/yes"
                android:layout_width="150dp"
                android:layout_height="wrap_content">

            </Button>
            <Button
                android:fontFamily="@font/ptregular"
                android:layout_gravity="center"
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>


    </LinearLayout>








</RelativeLayout>
</layout>