<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="80dp"
            android:padding="20dp"
            android:background="@drawable/corner_full_rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:progressDrawable="@drawable/custom_progress"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp">


            </ProgressBar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <EditText
                    android:maxLength="10"
                    android:id="@+id/etOperatorId"
                    android:hint="@string/operatorid"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></EditText>
            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/hint"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <EditText
                    android:maxLength="10"
                    android:id="@+id/etPassword"
                    android:hint="@string/pass"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:inputType="numberPassword"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></EditText>
            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/hint"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:background="@drawable/corner_full_rounded_btn_grey"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"></androidx.appcompat.widget.AppCompatButton>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirm"
                    android:background="@drawable/corner_full_rounded_btn_purple"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>

        </LinearLayout>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>


    </RelativeLayout>
</ScrollView>