<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="240dp"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/_12sdp"
    android:paddingRight="@dimen/_12sdp"
    android:background="@drawable/dialog_drawable_layout">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_13sdp"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/success"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/hint">
    </View>

    <LinearLayout
        android:id="@+id/linearLayoutPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cardNumberLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="start"
                android:text="@string/card_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/msg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/transactionTypeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/transactionType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/transactionType"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/msg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/success"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/amountLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/msg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/success"
                android:textColor="@color/red"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/hint">
        </View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:text="@string/confirm"/>
    </LinearLayout>

</RelativeLayout>